# nextbot

./: .gitignore  README.md  bot.py  pyproject.toml
.trellis/spec/backend/: quality-guidelines.md
.trellis/tasks/archive/2026-03/03-16-webui-api-refactor/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-03/03-24-update-inventory-api/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-03/03-25-03-25-signin-leaderboard/: prd.md  task.json
.trellis/tasks/archive/2026-03/03-25-leaderboard-streak/: prd.md  task.json
.trellis/tasks/archive/2026-03/03-25-redesign-inventory-page/: prd.md  task.json
.trellis/tasks/archive/2026-03/03-27-03-27-admin-list/: prd.md  task.json
.trellis/workspace/arispex/: index.md  journal-1.md
next_bot/: command_config.py  db.py  signin_reset.py
next_bot/plugins/: economy.py  menu.py  user_manager.py
nextbot/: db.py  time_utils.py
nextbot/plugins/: admin_list.py  basic.py  economy.py  leaderboard.py  menu.py  user_manager.py
server/: web_server.py
server/pages/: admin_list_page.py  console_page.py  inventory_page.py  leaderboard_page.py  menu_page.py
server/routes/: __init__.py  render.py  webui.py  webui_commands.py  webui_dashboard.py  webui_groups.py  webui_servers.py  webui_settings.py  webui_users.py
server/templates/: admin_list.html  inventory.html  leaderboard.html  menu.html
server/webui/static/css/: app-shell.css  commands.css  dashboard.css  groups.css  servers.css  settings.css  users.css
server/webui/static/js/: api.js  commands.js  dashboard.js  groups.js  servers.js  settings.js  users.js
server/webui/templates/: app_shell_base.html  commands_content.html  dashboard_content.html  groups_content.html  login.html  servers_content.html  settings_content.html  users_content.html
tests/: test_webui_copy_contract.py
